--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ astroid==2.3.3
 autopep8==1.5
 certifi==2020.4.5.1
 colorama==0.4.3
+dj-database-url==0.5.0
 Django==3.0.3
 django-crispy-forms==1.9.2
+django-debug-toolbar==3.1.1
 django-filter==2.3.0
 easy-thumbnails==2.7
 isort==4.3.21
